--- a/ASP.NET Web API Application/ASP.NET MVC/PivotTable/Views/Home/Index.cshtml
+++ b/ASP.NET Web API Application/ASP.NET MVC/PivotTable/Views/Home/Index.cshtml
@@ -2,15 +2,16 @@
     ViewBag.Title = "Home Page";
 }
 
-@Html.EJS().PivotView("PivotView").Height("300").DataSourceSettings(dataSource => dataSource.Url("https://localhost:44394/api/product"
+@Html.EJS().PivotView("PivotView").Height("300").DataSourceSettings(
+        dataSource => dataSource.Url("https://localhost:44394/api/product"
     ).ExpandAll(false).EnableSorting(true)
-.Rows(rows =>
-{
-    rows.Name("Country").Add(); rows.Name("State").Add();
-}).Columns(columns =>
-{
-    columns.Name("Product").Add();
-}).Values(values =>
-{
-    values.Name("Quantity").Add(); values.Name("Amount").Caption("Sold Amount").Add();
-})).ShowFieldList(true).Render()
+    .Rows(rows =>
+    {
+        rows.Name("Country").Add(); rows.Name("State").Add();
+    }).Columns(columns =>
+    {
+        columns.Name("Product").Add();
+    }).Values(values =>
+    {
+        values.Name("Quantity").Add(); values.Name("Amount").Caption("Sold Amount").Add();
+    })).ShowFieldList(true).Render()
