--- a/ASP.NET Web API Application/ASP.NET MVC/PivotTable/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Web API Application/ASP.NET MVC/PivotTable/Views/Shared/_Layout.cshtml
@@ -33,11 +33,12 @@
     </div>
     <div class="container body-content">
         @RenderBody()
+        <!-- Syncfusion ASP.NET MVC Script Manager -->
         @Html.EJS().ScriptManager()
-        @*<hr />
+        <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>*@
+        </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
