--- a/ASP.NET Core Application/ASP.NET MVC/PivotTable/Views/Home/Index.cshtml
+++ b/ASP.NET Core Application/ASP.NET MVC/PivotTable/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 @Html.EJS().PivotView("PivotView").Height("300").DataSourceSettings(
-        dataSource => dataSource.Url("https://localhost:44394/product"
+        dataSource => dataSource.Url("https://localhost:7139/Product"
     ).ExpandAll(false).EnableSorting(true)
     .Rows(rows =>
     {
